fix spacing on login page

--- a/css/login.css
+++ b/css/login.css
@@ -113,7 +113,7 @@ body {
 	background-color: transparent;
 	border: 2px solid var(--border-color);
 	color: var(--primary-color);
-	margin-top: 10px;
+	margin-top: -20px;
 }
 
 .facebook-btn:hover {
@@ -125,7 +125,7 @@ body {
 .horizontal-line-container {
 	display: flex;
 	justify-content: center;
-	margin: 20px 0;
+	margin: 10px 0;
 }
 
 .horizontal-line {
@@ -137,7 +137,7 @@ body {
 
 /* Sign-up section */
 .sign-up {
-	margin-top: 10px;
+	margin-top: 0px;
 	text-align: center;
 }
 
